bug fixed by reina

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang = 'zh'>
 
 <head>
     <title> html6 </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src=MarkerButton.js></script>
     <script src=ShapeText.js></script>
 </head>
 
 <body>
     <div></div>
-    <marker-button height="400" width="1500" linewidth="1">MarkerButton</marker-button>
+    <marker-button height="400" width="1500" linewidth="1" color="#ff0000">MarkerButton</marker-button>
 
     <div></div>
     <div></div>
