--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title> html6 </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src=MarkerButton.js></script>
-    <script src=ShapeText.js></script>
+    <script type="text/javascript" src=MarkerButton.js></script>
+    <script type="text/javascript" src=ShapeText.js></script>
     <script type="text/javascript" src="jquery.js"></script>
-    <script type="text/javascript" src="hmac-sha1.js"></script>
+    <script type="text/javascript" src="CopyTag.js"></script>
     <script>
         class WeatherCard extends HTMLElement 
         {
@@ -111,6 +111,8 @@
     <weather-card width="300" height="200" tcolor="#66ccff" ccolor="#66ccff" hcolor="#66ccff">
         WeatherCard
     </weather-card>
+
+    <copy-tag>我是果子走咿呀咿呀哟</copy-tag>
 
 </body>
 
