新增copytag的color标签

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title> html6 </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src=MarkerButton.js></script>
-    <script type="text/javascript" src=ShapeText.js></script>
+    <script type="text/javascript" src="MarkerButton.js"></script>
+    <script type="text/javascript" src="ShapeText.js"></script>
     <script type="text/javascript" src="jquery.js"></script>
     <script type="text/javascript" src="CopyTag.js"></script>
     <script type="text/javascript" src="WeatherTag.js"></script>
@@ -24,7 +24,7 @@
         WeatherCard
     </weather-card>
 
-    <copy-tag>我是果子走咿呀咿呀哟</copy-tag>
+    <copy-tag color="#66ccff">我是果子走咿呀咿呀哟</copy-tag>
 
 </body>
 
