增添了copytag的样式并完善了shapetext

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div></div>
     <marker-button height="400" width="1500" linewidth="1" color="#ff0000">MarkerButton</marker-button>
 
-    <shape-text type="triangle" color="#e74c3c" size="200">重要提示</shape-text>
-    <shape-text type="circle" color="#2ecc71" size="80">99+</shape-text>
-    <shape-text type="rectangle" color="#9b59b6" size="90">点击查看详情</shape-text>
+    <shape-text type="triangle" color="#e74c3c" size="200">三角</shape-text>
+    <shape-text type="circle" color="#2ecc71" size="400">斗地主</shape-text>
+    <shape-text type="rectangle" color="#9b59b6" size="400">羽毛人打火柴球</shape-text>
 
     <weather-card width="300" height="200" tcolor="#66ccff" ccolor="#66ccff" hcolor="#66ccff">
         WeatherCard
